--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "react-scripts": "4.0.1",
     "styled-components": "5.2.1"
   },
-  "scripts": {
-    "start": "start-storybook -p 6006 -s public",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006 -s public"
-  },
-
+"scripts": {
+  "start": "set NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006 -s public"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -42,8 +40,7 @@
     "@storybook/node-logger": "6.5.15",
     "@storybook/preset-create-react-app": "3.1.7",
     "@storybook/react": "6.5.15",
+    "cross-env": "^7.0.3",
     "webpack": "4.44.2"
   }
-
-
 }
